--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "4.17.2",
+    "framer-motion": "^6.2.8",
+    "graphql": "^16.3.0",
+    "mariadb": "^3.0.0",
+    "morgan": "^1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "sequelize": "^6.18.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
